# hierarchies

./: .gitignore  CONTRIBUTING.md  COST_ANALYSIS.md  Cargo.toml  Move.toml  README.MD  README.md  costs_100_properties_100_accreditors.yaml  costs_100_properties_5_accreditors.yaml  costs_200_properties_200_accreditors.yaml  costs_20_properties_5_accreditors.yaml  costs_30_properties_5_accreditors.yaml  costs_50_properties_50_accreditors.yaml  dprint.json  package-lock.json
access-controller-bridge/rs/examples/: .gitignore  01_full_initialization.rs  Cargo.toml  README.md
bindings/wasm/hierarchies_wasm/: Cargo.lock.old  Cargo.toml  README.md  cypress.config.ts  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  typedoc.json
bindings/wasm/hierarchies_wasm/cypress/: Dockerfile
bindings/wasm/hierarchies_wasm/cypress/app/: index.html  package-lock.json  package.json  vite.config.js
bindings/wasm/hierarchies_wasm/cypress/e2e/: tests.cy.js
bindings/wasm/hierarchies_wasm/examples/: README.md  tsconfig.web.json
bindings/wasm/hierarchies_wasm/examples/src/: 01_create_federation.ts  02_add_root_authority.ts  03_add_properties.ts  03_add_property.ts  (+13 more)
bindings/wasm/hierarchies_wasm/lib/: index.ts  tsconfig.json  tsconfig.web.json
bindings/wasm/hierarchies_wasm/src/: client_read_only.rs  full_client.rs  lib.rs  wasm_hierarchies_client_read_only.rs  wasm_statement_name.rs  wasm_statement_value.rs
hierarchies-rs/examples/: 01_create_federation.rs  02_add_root_authority.rs  03_add_properties.rs  03_add_statements.rs  04_create_accreditation_to_attest.rs  05_revoke_accreditation_to_attest.rs  06_create_accreditation_to_accredit.rs  07_revoke_accreditation_to_accredit.rs  08_revoke_root_authority.rs  09_reinstate_root_authority.rs  Cargo.toml  README.md  check_fee.rs  run  run.sh
hierarchies-rs/examples/getting_started/: getting_started.rs
hierarchies-rs/examples/real-world/: 01_university_degrees.rs  02_supply_chain.rs
hierarchies-rs/examples/utils/: utils.rs
hierarchies-rs/examples/validation/: 01_get_accreditations.rs  01_get_attestations_and_accreditations.rs  02_validate_properties.rs  02_validate_statements.rs  03_get_properties.rs  03_get_statements.rs
hierarchies-rs/hierarchies/: Cargo.toml  build.rs
hierarchies-rs/hierarchies/src/: error.rs  lib.rs  package.rs  utils.rs
hierarchies-rs/hierarchies/src/client/: error.rs  full_client.rs  mod.rs  read_only.rs
hierarchies-rs/hierarchies/src/core/: error.rs  mod.rs  operations.rs
hierarchies-rs/hierarchies/tests/e2e/: client.rs  main.rs  test_accreditations.rs  test_authority.rs  test_new_federation.rs  test_properties.rs  test_statements.rs
htf-rs/: Cargo.toml
htf-rs/examples/: 01_create_federation.rs  02_add_root_authority.rs  03_add_and_remove_trusted_property.rs  03_add_trusted_property.rs  04_create_attestation.rs  04_issue_credential.rs  04_issue_permission_to_attest.rs  05_issue_permission_to_attest.rs  05_revoke_attestation.rs  05_revoke_permission_to_attest.rs  06_create_accreditation.rs  06_issue_permission_to_accredit.rs  07_issue_permission_to_accredit.rs  07_revoke_accreditation.rs  07_revoke_permission_to_accredit.rs  Cargo.toml  utils.rs
htf-rs/examples/demo/: 01_add_and_revoke_attestation.rs  01_add_trust_property_add_attestation.rs
htf-rs/examples/utils/: utils.rs
htf-rs/examples/validation/offchain/: 01_check_permission_attest_and_accredit.rs  01_get_attestations_and_accreditations.rs  02_validate_trusted_properties.rs  03_get_federation_properties.rs  03_get_trusted_properties.rs
htf-rs/examples/validation/onchain/: 01_check_permission_to_attest_and_accredit.rs  01_get_attestations_and_accreditations.rs  02_validate_trusted_properties.rs  03_get_federation_properties.rs  03_get_trusted_properties.rs
htf-rs/htf/: Cargo.toml
htf-rs/htf/src/: client.rs  de.rs  federation.rs  htf.rs  key.rs  lib.rs  main.rs  types.rs  utils.rs
htf-rs/htf/src/client/: full_client.rs  mod.rs  read_only.rs
htf-rs/htf/src/provider/: mod.rs  offchain.rs  onchain.rs
htf-rs/htf/src/types/: cap.rs  credentials.rs  event.rs  permission.rs  trusted_constraints.rs  trusted_property.rs
htf-rs/htf/tests/: test_federation.rs  utils.rs
htf-rs/src/: client.rs  event.rs  htf.rs  key.rs  lib.rs
htf-rs/tests/: common.rs  test.rs  utils.rs
ith.rs/: Cargo.toml  dprint.json
ith.rs/.cargo/: audit.toml
ith.rs/examples/: 01_create_federation.rs  02_add_root_authority.rs  03_add_and_remove_statement.rs  03_add_and_remove_trusted_property.rs  03_add_statements.rs  04_create_accreditation_to_attest.rs  04_create_attestation.rs  05_revoke_accreditation_to_attest.rs  05_revoke_attestation.rs  06_create_accreditation.rs  06_create_accreditation_to_accredit.rs  07_revoke_accreditation.rs  07_revoke_accreditation_to_accredit.rs  Cargo.toml  run.sh
ith.rs/examples/getting_started/: getting_started.rs
ith.rs/examples/utils/: utils.rs
ith.rs/examples/validation/: 01_get_attestations_and_accreditations.rs  02_validate_statements.rs  03_get_statements.rs
ith.rs/examples/validation/offchain/: 01_get_attestations_and_accreditations.rs  02_validate_statements.rs  02_validate_trusted_properties.rs  03_get_statements.rs  03_get_trusted_properties.rs
ith.rs/examples/validation/onchain/: 01_get_attestations_and_accreditations.rs  02_validate_statements.rs  02_validate_trusted_properties.rs  03_get_statements.rs  03_get_trusted_properties.rs
ith.rs/ith/: Cargo.toml
ith.rs/ith/src/: error.rs  federation.rs  iota_interaction_adapter.rs  key.rs  lib.rs  package.rs  utils.rs
ith.rs/ith/src/client/: client.rs  error.rs  errors.rs  full_client.rs  mod.rs  read_only.rs
ith.rs/ith/src/core/: error.rs  errors.rs  mod.rs  move_error_parser.rs  operations.rs
ith.rs/ith/src/provider/: offchain.rs  onchain.rs
ith.rs/ith/src/types/: accreditation.rs  event.rs  mod.rs  permission.rs  statement_name.rs  trusted_constraints.rs  trusted_property.rs
ith.rs/ith/tests/: test_federation.rs  utils.rs
ith.rs/ith/tests/e2e/: client.rs  main.rs  test_accreditations.rs  test_new_federation.rs  test_statements.rs
(+211 files in other folders)
