[workspace]
members = ["hierarchies-rs/examples", "hierarchies-rs/hierarchies"]
exclude = ["bindings/wasm/hierarchies_wasm"]
resolver = "2"

[workspace.package]
version = "0.1.3-alpha"
authors = ["IOTA Stiftung"]
edition = "2024"
homepage = "https://www.iota.org"
license = "Apache-2.0"
repository = "https://github.com/iotaledger/hierarchies"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
bcs = "0.1"
chrono = { version = "0.4", features = ["serde"] }
iota-sdk = { git = "https://github.com/iotaledger/iota.git", tag = "v1.9.2", package = "iota-sdk" }
iota_interaction = { git = "https://github.com/iotaledger/product-core.git", default-features = false, tag = "v0.8.4", package = "iota_interaction" }
iota_interaction_rust = { git = "https://github.com/iotaledger/product-core.git", default-features = false, tag = "v0.8.4", package = "iota_interaction_rust" }
iota_interaction_ts = { git = "https://github.com/iotaledger/product-core.git", default-features = false, tag = "v0.8.4", package = "iota_interaction_ts" }
product_common = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.8.4", default-features = false, package = "product_common" }
secret-storage = { git = "https://github.com/iotaledger/secret-storage", tag = "v0.3.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", default-features = false, features = ["std", "derive"] }
thiserror = "2.0"
tokio = { version = "1.46", default-features = false, features = ["sync"] }

[profile.release.package.iota_interaction_ts]
opt-level = 's'
