[workspace]
resolver = "2"
members = ["hierarchies-rs/examples", "hierarchies-rs/hierarchies"]
exclude = ["bindings/wasm/hierarchies_wasm"]

[workspace.package]
version = "0.1.9-alpha"
authors = ["IOTA Stiftung"]
edition = "2024"
homepage = "https://www.iota.org"
license = "Apache-2.0"
repository = "https://github.com/iotaledger/hierarchies"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
bcs = "0.1"
chrono = { version = "0.4", features = ["serde"] }
# Latest hyper is not compatible with axum-server used by iota-sdk. We need to pin it to 1.7 until iota-sdk upgrades axum-server.
hyper = "=1.7" # Fix for iota-sdk 1.13 issue with axum-server.
iota-sdk = { package = "iota-sdk", git = "https://github.com/iotaledger/iota.git", tag = "v1.14.1" }
iota_interaction = { package = "iota_interaction", git = "https://github.com/iotaledger/product-core.git", tag = "v0.8.9", default-features = false }
iota_interaction_rust = { package = "iota_interaction_rust", git = "https://github.com/iotaledger/product-core.git", tag = "v0.8.9", default-features = false }
iota_interaction_ts = { package = "iota_interaction_ts", git = "https://github.com/iotaledger/product-core.git", tag = "v0.8.9", default-features = false }
product_common = { package = "product_common", git = "https://github.com/iotaledger/product-core.git", tag = "v0.8.9", default-features = false }
secret-storage = { git = "https://github.com/iotaledger/secret-storage", tag = "v0.3.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", default-features = false, features = ["derive", "std"] }
thiserror = "2.0"
tokio = { version = "1.46.1", default-features = false, features = ["sync"] }

[profile.release.package.iota_interaction_ts]
opt-level = "s"
