[workspace]
members = ["examples", "ith"]
resolver = "2"

[workspace.package]
authors = ["IOTA Stiftung"]
edition = "2021"
homepage = "https://www.iota.org"
license = "Apache-2.0"
repository = "https://github.com/iotaledger/ith"

[workspace.dependencies]
anyhow = "1.0.97"
async-trait = "0.1.87"
bcs = "0.1"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "5f2c63266a065996d53f98156f0412782b468597", package = "fastcrypto" }
iota = { git = "https://github.com/iotaledger/iota.git", package = "iota", version = "0.10.0-alpha" }
iota-keys = { git = "https://github.com/iotaledger/iota.git", package = "iota-keys", version = "0.10.0-alpha" }
iota-sdk = { git = "https://github.com/iotaledger/iota.git", package = "iota-sdk", version = "0.10.0-alpha" }
jsonpath-rust = "0.7"
move-core-types = { git = "https://github.com/iotaledger/iota.git", package = "move-core-types" }
secret-storage = { git = "https://github.com/iotaledger/secret-storage", rev = "74f2092f83f6d19bd399913ef021bedca722ef66" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared-crypto = { git = "https://github.com/iotaledger/iota.git", package = "shared-crypto", version = "0.10.0-alpha" }
tokio = { version = "1.43.0", features = ["full"] }
