[package]
name = "hierarchies_examples"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]

anyhow.workspace = true
chrono.workspace = true
hierarchies = { path = "../hierarchies" }
iota-sdk = { workspace = true }
product_common = { workspace = true, features = ["test-utils"] }
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true


[dependencies.reqwest]
version = "0.12.11"
features = ["json"]

[dependencies.log]
version = "0.4"

[dependencies.env_logger]
version = "0.11"

[dependencies.serde_yaml]
version = "0.9"

[dependencies.clap]
version = "4.5"
features = ["derive"]


[lib]
path = "utils/utils.rs"

[[example]]
path = "01_create_federation.rs"
name = "01_create_federation"

[[example]]
path = "02_add_root_authority.rs"
name = "02_add_root_authority"

[[example]]
path = "03_add_properties.rs"
name = "03_add_properties"

[[example]]
path = "04_create_accreditation_to_attest.rs"
name = "04_create_accreditation_to_attest"

[[example]]
path = "05_revoke_accreditation_to_attest.rs"
name = "05_revoke_accreditation_to_attest"

[[example]]
path = "06_create_accreditation_to_accredit.rs"
name = "06_create_accreditation_to_accredit"

[[example]]
path = "07_revoke_accreditation_to_accredit.rs"
name = "07_revoke_accreditation_to_accredit"

[[example]]
path = "08_revoke_root_authority.rs"
name = "08_revoke_root_authority"

[[example]]
path = "09_reinstate_root_authority.rs"
name = "09_reinstate_root_authority"

# Validation
[[example]]
path = "validation/01_get_accreditations.rs"
name = "01_validation_get_accreditations"

[[example]]
path = "validation/02_validate_properties.rs"
name = "02_validation_validate_properties"

[[example]]
path = "validation/03_get_properties.rs"
name = "03_validation_get_properties"

# Real World

[[example]]
path = "real-world/01_university_degrees.rs"
name = "01_real_world_university_degrees"

[[example]]
path = "real-world/02_supply_chain.rs"
name = "02_real_world_supply_chain"

[[example]]
path = "check_fee.rs"
name = "check_fee"
