[package]
name = "examples"
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
fastcrypto.workspace = true
htf = { path = "../htf" }
iota.workspace = true
iota-keys.workspace = true
iota-sdk.workspace = true
jsonpath-rust.workspace = true
secret-storage.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lib]
path = "utils/utils.rs"

[[example]]
path = "01_create_federation.rs"
name = "01_create_federation"

[[example]]
path = "02_add_root_authority.rs"
name = "02_add_root_authority"


[[example]]
path = "03_add_trusted_property.rs"
name = "03_add_trusted_property"

[[example]]
path = "04_issue_credential.rs"
name = "04_issue_credential"

[[example]]
path = "05_issue_permission_to_attest.rs"
name = "05_issue_permission_to_attest"
