[package]
name = "examples"
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
fastcrypto.workspace = true
htf = { path = "../htf" }
iota.workspace = true
iota-keys.workspace = true
iota-sdk.workspace = true
jsonpath-rust.workspace = true
secret-storage.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lib]
path = "utils/utils.rs"

[[example]]
path = "01_create_federation.rs"
name = "01_create_federation"

[[example]]
path = "02_add_root_authority.rs"
name = "02_add_root_authority"


[[example]]
path = "03_add_trusted_property.rs"
name = "03_add_trusted_property"


[[example]]
path = "04_issue_permission_to_attest.rs"
name = "04_issue_permission_to_attest"

[[example]]
path = "05_revoke_permission_to_attest.rs"
name = "05_revoke_permission_to_attest"


[[example]]
path = "06_issue_permission_to_accredit.rs"
name = "06_issue_permission_to_accredit"

[[example]]
path = "07_revoke_permission_to_accredit.rs"
name = "07_revoke_permission_to_accredit"

# Validation
[[example]]
path = "validation/offchain/01_check_permission_attest_and_accredit.rs"
name = "01_check_permission_attest"

[[example]]
path = "validation/offchain/02_validate_trusted_properties.rs"
name = "02_validate_trusted_properties"

[[example]]
path = "validation/offchain/03_get_federation_properties.rs"
name = "03_get_federation_properties"