[package]
name = "htf"
edition.workspace = true
authors.workspace = true

[dependencies]
iota-sdk.workspace = true
move-core-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
iota-keys.workspace = true
shared-crypto.workspace = true
bcs.workspace = true
fastcrypto.workspace = true
iota.workspace = true
secret-storage.workspace = true

[dev-dependencies]
jsonpath-rust.workspace = true
async-trait.workspace = true
