[package]
name = "examples"
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
fastcrypto.workspace = true
ith = { path = "../ith" }
iota.workspace = true
iota-keys.workspace = true
iota-sdk.workspace = true
jsonpath-rust.workspace = true
secret-storage.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lib]
path = "utils/utils.rs"

[[example]]
path = "01_create_federation.rs"
name = "01_create_federation"

[[example]]
path = "02_add_root_authority.rs"
name = "02_add_root_authority"


[[example]]
path = "03_add_and_remove_trusted_statement.rs"
name = "03_add_and_remove_trusted_statement"


[[example]]
path = "04_create_attestation.rs"
name = "04_create_attestation"

[[example]]
path = "05_revoke_accreditation_to_attest.rs"
name = "05_revoke_accreditation_to_attest"


[[example]]
path = "06_create_accreditation.rs"
name = "06_create_accreditation"

[[example]]
path = "07_revoke_accreditation_to_accredit.rs"
name = "07_revoke_accreditation_to_accredit"

# Validation
[[example]]
path = "validation/offchain/01_get_accreditations_to_attest_and_accreditations.rs"
name = "01_offchain_get_accreditations_to_attest_and_accrediatations"

[[example]]
path = "validation/offchain/02_validatestatements.rs"
name = "02_offchain_validatestatements"

[[example]]
path = "validation/offchain/03_get_trusted_statements.rs"
name = "03_offchain_get_trusted_statements"

[[example]]
path = "validation/onchain/01_get_accreditations_to_attest_and_accreditations.rs"
name = "01_onchain_get_accreditations_to_attest_and_accreditations"

[[example]]
path = "validation/onchain/02_validatestatements.rs"
name = "02_onchain_validatestatements"

[[example]]
path = "validation/onchain/03_get_trusted_statements.rs"
name = "03_onchain_get_trusted_statements"


# Demo
[[example]]
path = "getting_started/getting_started.rs"
name = "getting_started"
