[package]
name = "ith"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bcs.workspace = true
fastcrypto.workspace = true
iota.workspace = true
iota-keys.workspace = true
iota-sdk.workspace = true
move-core-types.workspace = true
secret-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
shared-crypto.workspace = true
strum = "0.26.3"
tokio.workspace = true

[dev-dependencies]
async-trait.workspace = true
jsonpath-rust.workspace = true
