[package]
name = "hierarchies_wasm"
version = "0.1.10-alpha"
authors = ["IOTA Stiftung"]
edition = "2024"
homepage = "https://www.iota.org"
keywords = ["iota", "tangle", "wasm"]
license = "Apache-2.0"
publish = false
readme = "README.md"
repository = "https://github.com/iotaledger/hierarchies"
resolver = "2"
description = "Web Assembly bindings for the hierarchies crate."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
console_error_panic_hook = "0.1"
# Latest hyper is not compatible with axum-server used by iota-sdk. We need to pin it to 1.7 until iota-sdk upgrades axum-server.
hyper = "=1.7" # Fix for iota-sdk 1.13 issue with axum-server.
iota_interaction = { package = "iota_interaction", git = "https://github.com/iotaledger/product-core.git", tag = "v0.8.10", default-features = false }
iota_interaction_ts = { package = "iota_interaction_ts", git = "https://github.com/iotaledger/product-core.git", tag = "v0.8.10" }
js-sys = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = { version = "=0.2.102", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4", default-features = false }

[dependencies.hierarchies]
path = "../../../hierarchies-rs/hierarchies"
default-features = false
features = ["default-http-client", "gas-station"]

[dependencies.product_common]
package = "product_common"
git = "https://github.com/iotaledger/product-core.git"
tag = "v0.8.10"
features = [
  "default-http-client",
  "binding-utils",
  "bindings",
  "core-client",
  "gas-station",
  "transaction",
]

[lints.clippy]
# can be removed as soon as fix has been added to clippy
# see https://github.com/rust-lang/rust-clippy/issues/12377
empty_docs = "allow"

[lints.rust]
# required for current wasm_bindgen version
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(wasm_bindgen_unstable_test_coverage)"] }

[profile.release]
opt-level = "s"
lto = true
# Enabling debug for profile.release may lead to more helpful logged call stacks.
# TODO: Clarify if 'debug = true' facilitates error analysis via console logs.
#       If not, remove the next line
#       If yes, describe the helping effect in the comment above
# debug = true
